# filerefine

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
src/: lib.rs  main.rs
tests/: tests.rs  tests_args.rs  tests_main.rs  tests_print_output.rs  tests_rename.rs
