[package]
name = "filerefine"
version = "0.1.7"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
categories = ["command-line-utilities"]
edition = "2021"
description = "🧹 FileRefine is a Rust-based CLI tool that renames files in a directory to remove unwanted or problematic characters from filenames."
license = "MIT"
homepage = "https://trinhminhtriet.com/"
repository = "https://github.com/trinhminhtriet/filerefine"
keywords = ["clean", "filename", "file", "filesystem", "tool"]


[[bin]]
name = "filerefine"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
